# Teh_prog

./: Jerome_-_Three_men_in_a_boat.txt  README.md  Vocabulary.txt  WarAndPeace.txt  WarAndPeaceCipherCaesar.txt  WarAndPeaceCipherVernam.txt  WarAndPeaceCipherVigenere.txt  backup  input.txt  input_sc1.txt  input_sc3.txt  input_sc4.txt  key.txt  model.txt  output.txt  output_sc7.txt  read.me  review.py  tests.py
2nd_task/: CMakeLists.txt
2nd_task/.kdev4/: 2nd_task.kdev4
2nd_task/A/: preparing.py
2nd_task/B/: CMakeLists.txt
2nd_task/C/: main.cpp  main.h
Bot/: read.me  script.sh
Game/: main.py  test.py
Raspberry/: build.sh  read.me
